[project]
name = "toolkit"
version = "0.1.0"
description = "A short description of your library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
