[metadata]
name = logpunch
version = 0.1.0
author = Gourav Gulia
author_email = grvgulia007@gmail.com
description = Custom logger and exception package for data science projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gauravgulia26/toolkit
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pydantic
    colorama

[options.packages.find]
where = .

[options.entry_points]